--- a/app/assets/stylesheets/layout/_common.sass
+++ b/app/assets/stylesheets/layout/_common.sass
@@ -21,9 +21,8 @@ section
 .btn
   padding: 0 19px
   font-family: "Proxima Nova Regular", "Myriad Pro Regular", sans-serif
-  font-size: 12px
+  font-size: 14px
   line-height: 30px
-  letter-spacing: 1.5px
   color: #fff
   border-radius: 5px
   background-color: #87b448
@@ -42,7 +41,7 @@ section
   &:hover
     text-decoration: underline
 
-ul[class$="-list"]
+.list
   li
     margin-bottom: 20px
     
