--- a/app/assets/stylesheets/components/_advertisement.sass
+++ b/app/assets/stylesheets/components/_advertisement.sass
@@ -1,20 +1,20 @@
 .advertisement-section
-  .section-header
-    margin-bottom: 4px
-    padding-left: 1px
-    line-height: 38px
-    letter-spacing: .4px
-  &:not(last-child)
+  padding-bottom: 18px
+
+  &:not(:last-child)
     border-bottom: 1px solid #e0e2e6
+
+  .section-header
+    margin-bottom: 6px
+    padding-left: 1px    
+    line-height: 36px
 
   .adv-img-wrapper
     width: 210px
     height: 300px
-    margin: 0 auto 8px
+    margin: 0 auto 7px
     font-size: 0
   
   .adv-footer
-    margin-bottom: 17px
     font-size: 11px
-    letter-spacing: .4px
     color: #d3d3d3
