--- a/app/assets/stylesheets/components/_featured_companies.sass
+++ b/app/assets/stylesheets/components/_featured_companies.sass
@@ -1,29 +1,24 @@
 .featured-companies-section
   margin-bottom: 10px
-  padding-top: 20px  
+  // padding-top: 20px  
   border-bottom: 1px solid #e0e2e6
 
   .section-header
-    margin-bottom: 16px
-    line-height: 1
-    letter-spacing: .42px
+    // margin-bottom: 16px
+    // line-height: 17px
+    line-height: 50px
 
   .see-all-link
-    top: 6px
-    letter-spacing: .4px
+    line-height: 50px
 
   .item-name
-    margin-bottom: 6px
-    line-height: 15px
-    letter-spacing: .4px
+    margin-bottom: 8px
+    line-height: 12px
 
   .item-role
     margin-bottom: 6px
-    letter-spacing: 0.1px 
 
   .item-location
     margin-bottom: 2px
-    letter-spacing: .5px
 
   .follow-link
-    letter-spacing: 0.4px 
