--- a/app/assets/stylesheets/components/_people.sass
+++ b/app/assets/stylesheets/components/_people.sass
@@ -1,34 +1,30 @@
 .people-section
-  // margin-bottom: 10px
-  padding-top: 20px  
+  margin-bottom: 1px
+  // padding-top: 20px  
   border-bottom: 1px solid #e0e2e6
 
   .section-header
-    margin-bottom: 16px
-    line-height: 1
-    letter-spacing: .42px
+    // margin-bottom: 16px
+    // line-height: 17px
+    line-height: 52px
 
   .see-all-link
-    top: 6px
-    letter-spacing: .4px
+    line-height: 52px
 
-  .people-item:last-child
-    margin-bottom: 25px
+  .people-item
+    margin-bottom: 22px
+
+    &:last-child
+      margin-bottom: 25px
 
   .item-name
-    margin-bottom: 6px
-    line-height: 15px
-    letter-spacing: .4px
+    margin-bottom: 11px
+    line-height: 8px
 
   .item-role
     margin-bottom: 6px
-    line-height: 17px
-    letter-spacing: 0.5px 
+    line-height: 16px
 
   .item-location
-    margin-bottom: 2px
-    line-height: 15px
-    letter-spacing: .5px
-
-  .follow-link
-    letter-spacing: 0.4px 
+    margin-bottom: 1px
+    line-height: 16px
