--- a/app/assets/stylesheets/layout/_main-content.sass
+++ b/app/assets/stylesheets/layout/_main-content.sass
@@ -5,8 +5,8 @@
   padding: 9px 0
 
   .page-header
-    margin-bottom: 11px
-    letter-spacing: .6px
+    margin-bottom: 16px
+    line-height: 37px
 
   .btn-add-service
     position: absolute
@@ -22,19 +22,88 @@
 .service-item
   display: inline-block
   margin: 0 8px
+  margin-bottom: 0 !important
   width: 140px
   vertical-align: top
+
+  &:nth-child(1)
+    .service-icon
+      background-image: url('images/icons/Shape_1.svg')
+  &:nth-child(2)
+    .service-icon
+      background-image: url('images/icons/Shape_2.svg')
+  &:nth-child(3)
+    .service-icon
+      background-image: url('images/icons/Shape_3.svg')
+  &:nth-child(4)
+    .service-icon
+      background-image: url('images/icons/Shape_4.svg')
+  &:nth-child(5)
+    .service-icon
+      background-image: url('images/icons/Shape_5.svg')
+  &:nth-child(6)
+    .service-icon
+      background-image: url('images/icons/Shape_6.svg')
+  &:nth-child(7)
+    .service-icon
+      background-image: url('images/icons/Shape_7.svg')
+  &:nth-child(8)
+    .service-icon
+      background-image: url('images/icons/Shape_8.svg')
+  &:nth-child(9)
+    .service-icon
+      background-image: url('images/icons/Shape_9.svg')
+  &:nth-child(10)
+    .service-icon
+      background-image: url('images/icons/Shape_10.svg')
+  &:nth-child(11)
+    .service-icon
+      background-image: url('images/icons/Shape_11.svg')
+  &:nth-child(12)
+    .service-icon
+      background-image: url('images/icons/Shape_12.svg')
+  &:nth-child(13)
+    .service-icon
+      background-image: url('images/icons/Shape_13.svg')
+  &:nth-child(14)
+    .service-icon
+      background-image: url('images/icons/Shape_14.svg')
+  &:nth-child(15)
+    .service-icon
+      background-image: url('images/icons/Shape_15.svg')
+  &:nth-child(16)
+    .service-icon
+      background-image: url('images/icons/Shape_16.svg')
+  &:nth-child(17)
+    .service-icon
+      background-image: url('images/icons/Shape_17.svg')
+  &:nth-child(18)
+    .service-icon
+      background-image: url('images/icons/Shape_18.svg')
+  &:nth-child(19)
+    .service-icon
+      background-image: url('images/icons/Shape_19.svg')
+  &:nth-child(20)
+    .service-icon
+      background-image: url('images/icons/Shape_20.svg')
+  &:nth-child(21)
+    .service-icon
+      background-image: url('images/icons/Shape_21.svg')
 
 
   .service-icon
     width: 140px
     height: 140px
+    margin-bottom: 7px
     border: 1px solid #e0e2e6
-    background: url('images/icons/Shape_1.svg') no-repeat center
+    background-repeat: no-repeat
+    background-position: center
+
+
 
   .service-name
-    padding: 0 18px
-    height: 60px
-    font-size: 13.61px    
+    padding: 10px 12px
+    font-size: 13.61px  
+    line-height: 17px  
     color: #1c2534
     text-align: center
