--- a/app/assets/stylesheets/layout/_nav.sass
+++ b/app/assets/stylesheets/layout/_nav.sass
@@ -6,17 +6,15 @@
     // font-size: 16px
     // line-height: 42px
 
-  .menu-item
-    height: 51px    
+  .menu-item 
     border-bottom: 1px solid #e0e2e6
-    letter-spacing: .5px;
-
     a
       position: relative
       display: block
-      padding: 17px 17px 17px 51px
+      padding: 13px 13px 13px 49px
       vertical-align: top
       color: #59606b
+      line-height: 24px
       text-decoration: none
 
       &:hover
