--- a/app/assets/stylesheets/base/_typography.sass
+++ b/app/assets/stylesheets/base/_typography.sass
@@ -1,11 +1,13 @@
-@font-face 
-    font-family: "Proxima Nova Regular"
-    src: local('ProximaNova'),
-    url("fonts/ProximaNovaRegular/ProximaNova-Regular.woff") format("woff"),
-    url("fonts/ProximaNovaRegular/ProximaNova-Regular.ttf") format("ttf"),
-    url("fonts/ProximaNovaRegular/ProximaNova-Regular.eot") format("eot")
-    font-style: normal
-    font-weight: normal
+@font-face {
+  font-family: 'Proxima Nova Regular';
+  src: url('ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
+        url('ProximaNova-Regular.otf')  format('opentype'),
+        url('ProximaNova-Regular.woff') format('woff'),
+        url('ProximaNova-Regular.ttf')  format('truetype'),
+        url('ProximaNova-Regular.svg#ProximaNova-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 body
   // font-family: "Proxima Nova Regular", "Myriad Pro Regular", sans-serif
