Rubber content, fix pixel perfect for left and right panels

--- a/app/assets/stylesheets/components/_advertisement.sass
+++ b/app/assets/stylesheets/components/_advertisement.sass
@@ -12,7 +12,7 @@
   .adv-img-wrapper
     width: 210px
     height: 300px
-    margin: 0 auto 7px
+    margin-bottom: 7px
     font-size: 0
   
   .adv-footer
