--- a/app/assets/stylesheets/components/_people.sass
+++ b/app/assets/stylesheets/components/_people.sass
@@ -6,10 +6,11 @@
   .section-header
     // margin-bottom: 16px
     // line-height: 17px
-    line-height: 52px
+    line-height: 30px
+    margin-bottom: 11px
 
   .see-all-link
-    line-height: 52px
+    line-height: 30px
 
   .people-item
     margin-bottom: 22px
