--- a/app/assets/stylesheets/layout/_common.sass
+++ b/app/assets/stylesheets/layout/_common.sass
@@ -2,9 +2,10 @@ section
   position: relative
 
 .wrapper
-  width: 970px
+  max-width: 1440px
+  min-width: 970px
   margin: 0 auto
-  padding: 0 15px
+  padding: 11px 15px
 
 .left
   float: left
