--- a/app/assets/stylesheets/layout/_nav.sass
+++ b/app/assets/stylesheets/layout/_nav.sass
@@ -7,7 +7,8 @@
     // line-height: 42px
 
   .menu-item 
-    border-bottom: 1px solid #e0e2e6
+    border-bottom: 1px solid #e0e2e6   
+
     a
       position: relative
       display: block
@@ -29,6 +30,13 @@
         height: 24px
         background-position: 100% 0
         background-repeat: no-repeat
+
+    &:first-child
+      a
+        padding-top: 2px
+
+        &:before
+          top: 2px
 
   .feed-link:before
     background-image: url('images/icons/Feed.svg')
