Pixel Perfect for header

--- a/app/assets/stylesheets/layout/_common.sass
+++ b/app/assets/stylesheets/layout/_common.sass
@@ -5,7 +5,8 @@ section
   max-width: 1440px
   min-width: 970px
   margin: 0 auto
-  padding: 11px 15px
+  // padding: 11px 15px
+  padding: 0 15px
 
 .left
   float: left
@@ -29,6 +30,9 @@ section
   background-color: #87b448
   cursor: pointer
   outline: none
+
+  &:active
+    background-color: #73993d
 
 .see-all-link
   position: absolute
