--- a/app/assets/stylesheets/layout/_header.sass
+++ b/app/assets/stylesheets/layout/_header.sass
@@ -1,25 +1,33 @@
+.header-content
+  padding: 11px 0 15px
+
 .main-header
-  // padding: 11px 0 15px 0
   height: 68px
   color: #fff
   background-color: #87b448
   border-bottom: 2px solid #71973c
+  margin-bottom: 11px
 
   a
     color: #fff
     text-decoration: none
 
   .logo-link 
-    display: inline-block
+    float: left
+    width: 130px
+    height: 40px
     vertical-align: bottom
-    margin-right: 30px
     font-size: 0
     line-height: 0
 
+  .search-wrapper
+    margin-right: 344px
+    margin-left: 161px
+    margin-top: 6px
+
   .search-input
-    display: inline-block
-    padding: 9.5px 0 9.5px 36px
-    vertical-align: bottom
+    width: 100%
+    padding: 8px 0 8px 36px
     font-family: "Proxima Nova Regular", "Myriad Pro Regular", sans-serif
     font-size: 15px
     line-height: 1
@@ -27,18 +35,20 @@
     outline: none
     border-radius: 2px
     background: url(images/icons/Search.svg) no-repeat 9px 10px #73993d
+    
 
     &::placeholder
       opacity: .8
 
   .icons-link-wrapper
     float: right
-    margin-right: 20px
+    margin-right: 23px
+    margin-top: 5px
 
   .chat-link, .notifications-link
     
     display: inline-block
-    width: 46px
+    width: 41px
     height: 34px
     vertical-align: bottom
     font-size: 0
@@ -54,18 +64,24 @@
 
   .user-link
     float: right
-    display: inline-block
-    height: 34px
-    vertical-align: bottom
     font-size: 16px
     line-height: 34px
+    margin-top: 6px
 
-  .user-avatar
+  .user-avatar-wrapper
     float: left
-    margin-right: 11px
-    border-radius: 3px
+    width: 32px
+    height: 32px
+    margin-top: 2px
+    margin-right: 12px
+    .user-avatar
+      width: 100%
+      height: 100%
+      border-radius: 3px
 
   .user-name
-    display: inline-block
+    float: left
+    margin-right: 10px
+
 
     
