--- a/app/assets/stylesheets/layout/_main-content.sass
+++ b/app/assets/stylesheets/layout/_main-content.sass
@@ -1,8 +1,7 @@
 .main-content
   position: relative
   margin-right: 229px
-  margin-left: 226px  
-  // padding: 9px 0
+  margin-left: 226px
 
   .page-header
     margin-bottom: 17px
@@ -18,11 +17,11 @@
   font-size: 0px
   border: 1px solid #e0e2e6
   border-radius: 5px
+  text-align: center
   
 .service-item
   display: inline-block
   margin: 0 8px
-  // margin-bottom: 0 !important
   width: 140px
   vertical-align: top
   cursor: pointer
@@ -106,8 +105,6 @@
     border: 1px solid #e0e2e6
     background-repeat: no-repeat
     background-position: center
-
-
 
   .service-name
     padding: 10px 12px
