Edit header markup (rubber search input)

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,4 @@
+@import 'helpers/module';
 @import 'base/module';
-// @import 'helpers/module';
 @import 'layout/module';
 @import 'components/module';
