--- a/app/assets/stylesheets/layout/_nav.sass
+++ b/app/assets/stylesheets/layout/_nav.sass
@@ -14,7 +14,7 @@
       display: block
       padding: 13px 13px 13px 49px
       vertical-align: top
-      color: #59606b
+      color: $dark-gray
       line-height: 24px
       text-decoration: none
 
@@ -39,14 +39,14 @@
           top: 2px
 
   .feed-link:before
-    background-image: url('images/icons/Feed.svg')
+    background-image: url('../images/icons/Feed.svg')
 
   .ask-link:before
-    background-image: url('images/icons/Ask.svg')
+    background-image: url('../images/icons/Ask.svg')
 
   .companies-link:before
-    background-image: url('images/icons/Companies.svg')
+    background-image: url('../images/icons/Companies.svg')
 
   .services-link:before
-    background-image: url('images/icons/Services.svg')
+    background-image: url('../images/icons/Services.svg')
 
