--- a/app/assets/stylesheets/layout/_main-content.sass
+++ b/app/assets/stylesheets/layout/_main-content.sass
@@ -24,78 +24,77 @@
   margin: 0 8px
   width: 140px
   vertical-align: top
-  cursor: pointer
 
   &:hover
     .service-icon
       background-color: #f4f7fb
 
     .service-name
-      color: #71973c
+      color: $dark-green
 
   &:nth-child(1)
     .service-icon
-      background-image: url('images/icons/Shape_1.svg')
+      background-image: url('../images/icons/Shape_1.svg')
   &:nth-child(2)
     .service-icon
-      background-image: url('images/icons/Shape_2.svg')
+      background-image: url('../images/icons/Shape_2.svg')
   &:nth-child(3)
     .service-icon
-      background-image: url('images/icons/Shape_3.svg')
+      background-image: url('../images/icons/Shape_3.svg')
   &:nth-child(4)
     .service-icon
-      background-image: url('images/icons/Shape_4.svg')
+      background-image: url('../images/icons/Shape_4.svg')
   &:nth-child(5)
     .service-icon
-      background-image: url('images/icons/Shape_5.svg')
+      background-image: url('../images/icons/Shape_5.svg')
   &:nth-child(6)
     .service-icon
-      background-image: url('images/icons/Shape_6.svg')
+      background-image: url('../images/icons/Shape_6.svg')
   &:nth-child(7)
     .service-icon
-      background-image: url('images/icons/Shape_7.svg')
+      background-image: url('../images/icons/Shape_7.svg')
   &:nth-child(8)
     .service-icon
-      background-image: url('images/icons/Shape_8.svg')
+      background-image: url('../images/icons/Shape_8.svg')
   &:nth-child(9)
     .service-icon
-      background-image: url('images/icons/Shape_9.svg')
+      background-image: url('../images/icons/Shape_9.svg')
   &:nth-child(10)
     .service-icon
-      background-image: url('images/icons/Shape_10.svg')
+      background-image: url('../images/icons/Shape_10.svg')
   &:nth-child(11)
     .service-icon
-      background-image: url('images/icons/Shape_11.svg')
+      background-image: url('../images/icons/Shape_11.svg')
   &:nth-child(12)
     .service-icon
-      background-image: url('images/icons/Shape_12.svg')
+      background-image: url('../images/icons/Shape_12.svg')
   &:nth-child(13)
     .service-icon
-      background-image: url('images/icons/Shape_13.svg')
+      background-image: url('../images/icons/Shape_13.svg')
   &:nth-child(14)
     .service-icon
-      background-image: url('images/icons/Shape_14.svg')
+      background-image: url('../images/icons/Shape_14.svg')
   &:nth-child(15)
     .service-icon
-      background-image: url('images/icons/Shape_15.svg')
+      background-image: url('../images/icons/Shape_15.svg')
   &:nth-child(16)
     .service-icon
-      background-image: url('images/icons/Shape_16.svg')
+      background-image: url('../images/icons/Shape_16.svg')
   &:nth-child(17)
     .service-icon
-      background-image: url('images/icons/Shape_17.svg')
+      background-image: url('../images/icons/Shape_17.svg')
   &:nth-child(18)
     .service-icon
-      background-image: url('images/icons/Shape_18.svg')
+      background-image: url('../images/icons/Shape_18.svg')
   &:nth-child(19)
     .service-icon
-      background-image: url('images/icons/Shape_19.svg')
+      background-image: url('../images/icons/Shape_19.svg')
   &:nth-child(20)
     .service-icon
-      background-image: url('images/icons/Shape_20.svg')
+      background-image: url('../images/icons/Shape_20.svg')
   &:nth-child(21)
     .service-icon
-      background-image: url('images/icons/Shape_21.svg')
+      background-image: url('../images/icons/Shape_21.svg')
 
 
   .service-icon
