Add ajax for categories, error handler, modal and preloader

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,4 @@
-@import 'helpers/module';
-@import 'base/module';
-@import 'layout/module';
-@import 'components/module';
+@import 'helpers/index';
+@import 'base/index';
+@import 'layout/index';
+@import 'components/index';
