--- a/app/assets/stylesheets/components/index.sass
+++ b/app/assets/stylesheets/components/index.sass
@@ -1,4 +1,6 @@
 @import 'advertisement'
 @import 'featured_companies'
-@import 'people'
 @import 'featured_products'
+@import 'modal'
+@import 'people'
+@import 'preloader'
