--- a/app/assets/stylesheets/base/_typography.sass
+++ b/app/assets/stylesheets/base/_typography.sass
@@ -16,9 +16,14 @@ body
 
 h1
   font-size: 30px
-  font-weight: normal;
+  font-weight: normal
   line-height: 42px
   color: $black-blue
+
+h2
+  font-size: 26px
+  font-weight: normal
+  line-height: 42px
 
 h4
   font-size: 14px
