Refactor styles, add Logo.svg, delete static services icons

--- a/app/assets/stylesheets/components/_modal.sass
+++ b/app/assets/stylesheets/components/_modal.sass
@@ -18,7 +18,7 @@
     background-size: contain
 
     &:hover
-      opacity: .8
+      opacity: $opacity-hover
 
 .modal-header
   margin-bottom: 10px
