--- a/app/assets/stylesheets/components/index.sass
+++ b/app/assets/stylesheets/components/index.sass
@@ -1,6 +1,6 @@
 @import 'advertisement'
+@import 'media_section'
 @import 'featured_companies'
-@import 'featured_products'
 @import 'modal'
-@import 'people'
 @import 'preloader'
+@import 'services'
