--- a/app/assets/stylesheets/components/_advertisement.sass
+++ b/app/assets/stylesheets/components/_advertisement.sass
@@ -1,4 +1,5 @@
 .advertisement-section
+  margin-bottom: 10px
   padding-bottom: 18px
 
   &:not(:last-child)
@@ -6,8 +7,8 @@
 
   .section-header
     margin-bottom: 6px
-    padding-left: 1px    
-    line-height: 36px
+    padding: 0
+    line-height: 34px
 
   .adv-img-wrapper
     width: 210px
