--- a/app/assets/stylesheets/components/_featured_companies.sass
+++ b/app/assets/stylesheets/components/_featured_companies.sass
@@ -1,24 +1,12 @@
+/*переопределены стили media_list, т.к. .item-name обтекает фото*/
+
 .featured-companies-section
-  margin-bottom: 10px
-  // padding-top: 20px  
-  border-bottom: 1px solid #e0e2e6
-
   .section-header
-    // margin-bottom: 16px
-    // line-height: 17px
-    line-height: 50px
-
-  .see-all-link
-    line-height: 50px
+    margin-bottom: 10px
+    line-height: 
 
   .item-name
-    margin-bottom: 8px
-    line-height: 12px
-
-  .item-role
-    margin-bottom: 6px
-
-  .item-location
     margin-bottom: 2px
 
-  .follow-link
+  .see-all-link
+    line-height: 30px
