--- a/app/assets/stylesheets/layout/_header.sass
+++ b/app/assets/stylesheets/layout/_header.sass
@@ -4,10 +4,8 @@
   background-color: $green
   border-bottom: 2px solid $dark-green
   margin-bottom: 11px
-
   a
     color: #fff
-    text-decoration: none
 
 .header-content
   display: table
@@ -32,16 +30,14 @@
   font-size: 0
 
 .chat-link,
-.notifications-link
-    
+.notifications-link    
   display: inline-block
-  width: 44px
+  width: 46px
   height: 34px
   vertical-align: bottom
   font-size: 0
-
   &:hover
-    opacity: .5
+    opacity: $opacity-hover
 
 .chat-link
   background: url('../images/icons/Notifications.svg') no-repeat center center
@@ -57,7 +53,7 @@
 .search-input
   width: 100%
   padding: 8px 0 8px 36px
-  font-family: "Proxima Nova Regular", "Myriad Pro Regular", sans-serif
+  font-family: "Proxima Nova Regular", sans-serif
   font-size: 15px
   line-height: 1
   color: #fff
@@ -71,11 +67,10 @@
 
 .user-avatar-wrapper
   display: inline-block
-  margin-right: 7px
+  margin-right: 10px
   width: 32px
   height: 32px
   vertical-align: middle
-
   .user-avatar
     width: 100%
     height: 100%
@@ -87,6 +82,4 @@
   vertical-align: middle
   font-size: 16px
   line-height: 32px
-  white-space: nowrap
-  overflow: hidden
-  text-overflow: ellipsis
+  @extend .overflow-row
