--- a/app/assets/stylesheets/layout/_main-content.sass
+++ b/app/assets/stylesheets/layout/_main-content.sass
@@ -1,51 +1,19 @@
 .main-content
   position: relative
-  margin-right: 229px
-  margin-left: 226px
+  margin-right: 227px
+  margin-left: 227px
 
-  .page-header
-    margin-bottom: 17px
-    line-height: 34px
+.page-header
+  margin-bottom: 17px
+  padding-right: 150px
+  line-height: 34px
+  @extend .overflow-row
 
-  .btn-add-service
-    position: absolute
-    top: 1px
-    right: 1px
-
-.services-list
-  padding: 15px 6px
-  font-size: 0px
-  border: 1px solid #e0e2e6
-  border-radius: 5px
-  text-align: center
-  
-.service-item
-  display: inline-block
-  margin: 0 8px
-  width: 140px
-  vertical-align: top
-
+.btn-add-service
+  position: absolute
+  top: 1px
+  right: 0px
+  max-width: 145px
+  @extend .overflow-row
   &:hover
-    .service-icon
-      background-color: #f4f7fb
-
-    .service-name
-      color: $dark-green
-
-
-  .service-icon
-    width: 140px
-    height: 140px
-    margin-bottom: 4px
-    border: 1px solid #e0e2e6
-    text-align: center
-    & > img
-      width: 100%
-      height: 100%
-
-  .service-name
-    padding: 10px 12px
-    font-size: 13.61px  
-    line-height: 17px  
-    color: #1c2534
-    text-align: center
+    color: rgba(255,255,255,$opacity-hover)
