Add service for getting categories, material dialog, change package.json

--- a/frontend/styles/vendor.css
+++ b/frontend/styles/vendor.css
@@ -1,1 +1,1 @@
-/*//= require ../../../node_modules/jquery-modal/jquery.modal.min.css*/
+//= require ../../node_modules/angular-material/angular-material.css
