--- a/frontend/views/login/login.html
+++ b/frontend/views/login/login.html
@@ -15,6 +15,9 @@
 </section>
 
 <section class="login-section">
+  <form>
+    
+  </form>
   <div class="login-text">Already have an account? <a href="#" class="login-link">Log in now</a></div>
 </section>
 
