--- a/frontend/styles/application.sass
+++ b/frontend/styles/application.sass
@@ -2,5 +2,6 @@
 @import 'base/index';
 @import 'layout/index';
 @import 'components/index';
-@import 'login/index';
+@import 'support/index';
 @import 'modal/index';
+@import 'form/index';
