--- a/frontend/styles/layout/_common.sass
+++ b/frontend/styles/layout/_common.sass
@@ -33,6 +33,6 @@
   cursor: pointer
   outline: none
   &:hover
-    color: rgba(255,255,255,$opacity-hover)
+    // color: rgba(255,255,255,$opacity-hover)
   &:active
     background-color: $dark-green
