--- a/frontend/styles/vendor.css
+++ b/frontend/styles/vendor.css
@@ -1,1 +1,4 @@
 //= require ../../node_modules/angular-material/angular-material.css
+//= require ../../node_modules/angular-dropdowns/dist/angular-dropdowns.min.css
+/*//= require ../../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css*/
+/*//= require ../../node_modules/ui-select/dist/select.min.css*/
