--- a/frontend/views/categories/categories.html
+++ b/frontend/views/categories/categories.html
@@ -1,6 +1,6 @@
 <h2 class="page-header">{{categories.header}}</h2>
 <button class="btn btn-add-service">Add New Service</button>
-<div id="preloader" ng-show="categories.isloading"></div>
+<div ng-show="categories.isloading" class="preloader"></div>
 <ul class="services-list" ng-show="categories.categoriesIsLoaded">
   <li ng-repeat="category in categories.categories" class="service-item">
     <a ng-href="#">
