Refactor support.html and styles

--- a/frontend/styles/support/_greeting.sass
+++ b/frontend/styles/support/_greeting.sass
@@ -1,16 +1,17 @@
 .greeting-section
-  height: 510px
-  padding: 80px 40px
+  min-height: 510px
+  padding: 80px 40px 100px
   text-align: center
   background: url('../images/landing_1.jpg') no-repeat center
   background-size: cover
 
 .greeting-header
-  margin-top: 114px
-  margin-bottom: 20px
+  margin-top: 105px
+  margin-bottom: 12px
   font-family: "ProximaNova-Light", sans-serif
   font-weight: 300
   color: $light
+  @extend .overflow-row
   
 .greeting-text
   font-family: "ProximaNova-Light", sans-serif
