--- a/frontend/styles/support/_support_footer.sass
+++ b/frontend/styles/support/_support_footer.sass
@@ -1,18 +1,23 @@
 .login-footer
   width: 100%
-  padding: 0 80px
+  padding: 30px 65px
   font-size: 12px
-  line-height: 73px
+  line-height: 16px
   color: #b7bfcd
 
   .copyright
     float: left
+    max-width: 50%
+    padding-right: 40px
 
 .footer-links
   float: right
+  max-width: 50%
+  padding-left: 40px
 
 .footer-link
   margin-left: 20px
   color: #b7bfcd
+  // @extend .overflow-row
   &:hover
     text-decoration: underline
