--- a/frontend/styles/support/_about.sass
+++ b/frontend/styles/support/_about.sass
@@ -10,11 +10,13 @@
   margin-bottom: 32px
   font-size: 30px
   text-align: center
+  @extend .overflow-row
 
 .about-paragraph
   display: inline-block
   width: 50%
   padding-right: 40px
+  vertical-align: top
   font-size: 16px
   line-height: 24px
   color: $gray
