Add validation on photo uploader, refactor

--- a/frontend/styles/support/_login.sass
+++ b/frontend/styles/support/_login.sass
@@ -1,19 +1,26 @@
 .login-section
-  display: table
   position: relative
+  z-index: 0
   width: 100%
-  height: 817px
+  padding-bottom: 79px
   background: url('../images/bg.jpg') no-repeat
   background-size: cover
   border: 1px solid #e0e2e6
+  
 
 .login-text
-  display: table-cell  
+  position: absolute
+  top: 50%
+  left: 50%
+  z-index: -1
+  margin-top: -21px
+  margin-left: -114px
   font-size: 14px
   line-height: 42px
   color: $gray
   text-align: center
-  vertical-align: middle
+
+  
 
 .login-link
   color: $green
