--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>.test.angular</title>
+  <title>abz.test.angular</title>
   <base href="/">
 
   <link rel="stylesheet" type="text/css" href="stylesheets/vendor.min.css">
