--- a/frontend/styles/form/_form.sass
+++ b/frontend/styles/form/_form.sass
@@ -1,13 +1,11 @@
 .support-form
-  position: absolute
-  top: -101px
-  left: 50%
-  margin-left: -380px
   width: 760px
+  margin: -101px auto 20px
+
 
 .fields-container
-  margin-bottom: 20px
-  padding: 5px 19px
+  margin-bottom: 22px
+  padding: 5px 19px 0
   background-color: #fff
   border: 1px solid #e0e2e6
   border-radius: $border-radius
@@ -85,7 +83,7 @@
   width: 100%
   padding: 0 21px
   font-size: 16px
-  line-height: 50px
+  line-height: 52px
   text-align: center
 
 .wrap-dd-select .dropdown
@@ -115,103 +113,3 @@
 
 .invalid-input
   border-color: $red
-
-
-.uploader
-  // padding: 12px 0
-
-  .file-upload
-    position: relative
-    float: left
-    display: table
-    width: 130px
-    height: 130px
-    margin-right: 31px
-    margin-bottom: 20px
-    background-color: #f7f7f7
-    border: 1px solid #c8cdd5
-    border-radius: 3px
-    text-align: center
-    overflow: hidden
-    cursor: pointer
-    font-size: 0
-
-  .pic-wrapper
-    display: table-cell
-    height: 100%
-    vertical-align: middle
-
-  span
-    font-size: 16px
-    line-height: 1
-    color: #7c8695
-
-  .add
-    display: inline-block
-    margin-bottom: 6px
-    line-height: 17px
-
-  .pic-parameters
-    display: inline-block
-    margin-bottom: 6px
-    font-size: 12px
-    line-height: 14px
-    color: #c2c2c4
-
-  .pic-validation
-    font-size: 12px
-    line-height: 15px
-    color: $red
-
-  .pic-preview
-    position: relative
-    display: inline-block
-    font-size: 0
-    border: 1px solid #c8cdd5
-    border-radius: 3px
-    canvas
-      border-radius: 3px
-
-  
-
-  .thumb
-    position: relative
-    width: 130px
-    height: 130px
-
-  .btn-remove-pic
-    position: absolute
-    top: -12px
-    right: -12px
-    width: 24px
-    height: 24px  
-    background: url('/images/icons/Remove.svg') no-repeat center
-    background-color: #65bade
-    background-size: cover
-    border-radius: 50%
-    outline: none
-    &:hover
-      background-color: #d95252
-
-  .file-input
-    position: absolute
-    top: 0px
-    left: 0px
-    width: 100%
-    height: 100%
-    opacity: 0
-    visibility: hidden
-
-.pic-to-upload-list
-  float: left
-
-.pic-to-upload-item
-  display: inline-block
-  margin-right: 31px
-
-.preview-img
-  width: 130px
-  height: 130px
-  background-repeat: no-repeat
-  background-position: 50% 50%
-  background-size: cover
